messed around with design

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <fieldset>
                 <label for="moods">Mood for the day</label>
                 <select id="moods" name="moods">
-                    <option value="sad">sad</option>
-                    <option value="happy">happy</option>
-                    <option value="angry">angry</option>
-                    <option value="releaved">releaved</option>
+                    <option value="sad">Sad</option>
+                    <option value="happy">Happy</option>
+                    <option value="angry">Angry</option>
+                    <option value="releaved">Releaved</option>
                     <option value="ok">Ok</option>
                 </select>
             </fieldset>
