added delete button to entries

--- a/src/index.html
+++ b/src/index.html
@@ -32,16 +32,29 @@
             <fieldset>
                 <label for="moods">Mood for the day</label>
                 <select id="moods" name="moods">
-                    <option value="sad">Sad</option>
-                    <option value="happy">Happy</option>
-                    <option value="angry">Angry</option>
-                    <option value="releaved">Releaved</option>
-                    <option value="ok">Ok</option>
+                    <option value="Sad">Sad</option>
+                    <option value="Happy">Happy</option>
+                    <option value="Angry">Angry</option>
+                    <option value="Releaved">Releaved</option>
+                    <option value="Ok">Ok</option>
                 </select>
             </fieldset>
             
                 <input type="submit" id="submitButton" value="Record Journal Entry">   
         </form>
+
+        <fieldset>
+            <label for="moodsFilter">Filter by Mood</label>
+            <select id="moodsFilter" name="moodsFilter">
+                <option value="Sad">Sad</option>
+                <option value="Happy">Happy</option>
+                <option value="Angry">Angry</option>
+                <option value="Releaved">Releaved</option>
+                <option value="Ok">Ok</option>
+            </select>
+        </fieldset>
+        
+
         <div id="entryLog"></div>
         <footer>
              <a href="https://github.com/BenWatts9">Ben Watts &#169</a>
